# podcast-generator

./: CLAUDE.md  README.md
backend/: .env.example  .gitignore  progress.md  pyproject.toml
backend/app/: cli.py  main.py
backend/app/api/routes/: generate.py
backend/app/core/: config.py
backend/app/services/: audio_generator.py  mcp_client.py  script_generator.py
backend/app/services/research/sources/: arxiv.py  base.py
frontend/: STYLE_GUIDE.md  package-lock.json  package.json
frontend/src/: App.css  App.tsx  index.css
frontend/src/api/: podcast.ts
frontend/src/types/: podcast.ts
