[project]
name = "podcast-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.75.0",
    "elevenlabs>=2.26.1",
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "pydantic-settings>=2.12.0",
    "uvicorn[standard]>=0.38.0",
]
